v2/apps/glance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    pod-security.kubernetes.io/enforce: privileged
