v2/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app.kubernetes.io/name: glance
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: glance
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
