v2/apps/glance/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.home.shasame.fr`)
      kind: Rule
      services:
        - name: glance
          port: 80
  tls: {}
